push todo -js branch

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ main aside{text-align: center;}
     </style>
 </head>
 <body> 
+  <script src="./js/app.js" ></script>
     <header> 
       <table width="75%"> 
         <tr> 
